--- a/main.html
+++ b/main.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kommentare</title>
+
     <!-- Firebase SDK einbinden -->
     <script src="https://www.gstatic.com/firebasejs/9.6.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.6.0/firebase-database.js"></script>
@@ -23,62 +24,65 @@
     <h2>Kommentare:</h2>
     <div id="commentsContainer"></div>
 
-    <!-- Firebase initialisieren -->
+    <!-- JavaScript zum Laden der Firebase-Konfiguration und Initialisieren von Firebase -->
     <script>
-        // Firebase-Konfiguration (ersetze mit deinen eigenen Firebase-Config-Daten)
-        const firebaseConfig = {
-            apiKey: "DEIN_API_KEY",
-            authDomain: "DEIN_AUTH_DOMAIN",
-            databaseURL: "DEIN_DATABASE_URL",
-            projectId: "DEIN_PROJECT_ID",
-            storageBucket: "DEIN_STORAGE_BUCKET",
-            messagingSenderId: "DEIN_MESSAGING_SENDER_ID",
-            appId: "DEIN_APP_ID"
-        };
+        // Funktion zum Laden der Firebase-Konfiguration aus der config.json
+        fetch('config.json')
+            .then(response => response.json())
+            .then(config => {
+                // Firebase-Konfiguration
+                const firebaseConfig = config;
 
-        // Firebase App initialisieren
-        const app = firebase.initializeApp(firebaseConfig);
-        const database = firebase.database();
+                // Firebase initialisieren
+                const app = firebase.initializeApp(firebaseConfig);
+                const database = firebase.database();
 
-        // Kommentare anzeigen
-        function loadComments() {
-            const commentsRef = database.ref("comments");
-            commentsRef.on("value", (snapshot) => {
-                const comments = snapshot.val();
-                const commentsContainer = document.getElementById("commentsContainer");
-                commentsContainer.innerHTML = ""; // Alte Kommentare löschen
+                // Kommentare laden
+                function loadComments() {
+                    const commentsRef = database.ref("comments");
+                    commentsRef.on("value", (snapshot) => {
+                        const comments = snapshot.val();
+                        const commentsContainer = document.getElementById("commentsContainer");
+                        commentsContainer.innerHTML = ""; // Alte Kommentare löschen
 
-                // Kommentare aus der Firebase-Datenbank holen und anzeigen
-                for (let id in comments) {
-                    const comment = comments[id];
-                    const div = document.createElement("div");
-                    div.innerHTML = `<strong>${comment.username}</strong>: <p>${comment.comment}</p><hr>`;
-                    commentsContainer.appendChild(div);
+                        if (comments) {
+                            // Kommentare aus der Firebase-Datenbank holen und anzeigen
+                            for (let id in comments) {
+                                const comment = comments[id];
+                                const div = document.createElement("div");
+                                div.innerHTML = `<strong>${comment.username}</strong>: <p>${comment.comment}</p><hr>`;
+                                commentsContainer.appendChild(div);
+                            }
+                        }
+                    });
                 }
-            });
-        }
 
-        loadComments();
+                loadComments();
 
-        // Kommentar absenden
-        document.getElementById("commentForm").addEventListener("submit", function(event) {
-            event.preventDefault();
+                // Kommentar absenden
+                document.getElementById("commentForm").addEventListener("submit", function(event) {
+                    event.preventDefault();
 
-            const username = document.getElementById("username").value;
-            const commentText = document.getElementById("comment").value;
+                    const username = document.getElementById("username").value;
+                    const commentText = document.getElementById("comment").value;
 
-            if (username && commentText) {
-                const commentsRef = database.ref("comments");
-                commentsRef.push({
-                    username: username,
-                    comment: commentText
+                    if (username && commentText) {
+                        const commentsRef = database.ref("comments");
+                        const newCommentRef = commentsRef.push();
+                        newCommentRef.set({
+                            username: username,
+                            comment: commentText
+                        });
+
+                        // Felder zurücksetzen
+                        document.getElementById("username").value = "";
+                        document.getElementById("comment").value = "";
+                    }
                 });
-
-                // Felder zurücksetzen
-                document.getElementById("username").value = "";
-                document.getElementById("comment").value = "";
-            }
-        });
+            })
+            .catch(error => {
+                console.error('Fehler beim Laden der Firebase-Konfiguration:', error);
+            });
     </script>
 </body>
 </html>
